fixed home page alignment, added icons to closed nav bar and added padding to profile page

--- a/frontend/src/components/AICompanion/AICompanion.css
+++ b/frontend/src/components/AICompanion/AICompanion.css
@@ -1,89 +1,4 @@
-/* .ai-modal-overlay {
-  position: fixed;
-  right: 1rem;
-  background-color: white;
-  width: 30rem;
-  display: flex;
-  align-items: center;
-  width: 30vw;
-  height: 80vh;
-  overflow: hidden;
-  border-radius: 0.5rem;
-}
-.ai-chat-container {
-  flex: 1;
-  overflow-y: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 10rem;
-}
 
-.ai-message-header {
-  display: flex;
-  align-items: center;
-}
-
-.ai-chatbot-input {
-  position: absolute;
-  left: 1rem;
-  top: 36rem;
-  width: 25rem;
-  padding: 0.5rem;
-  margin-top: auto;
-}
-
-.ai-chatbot-send-btn {
-  position: absolute;
-  left: 28rem;
-  top: 36.1rem;
-  padding: 0.5rem;
-}
-
-.ai-avatar {
-  width: 40px;
-  height: 40px;
-  object-fit: cover;
-  margin-right: 0.3rem;
-}
-
-b {
-  font-family: "Bold";
-}
-
-.ai-chatbot-message {
-  font-family: "Regular";
-}
-
-.ai-chatbot-messages {
-  flex: 1;
-  overflow-y: auto;
-}
-.chatbot-message {
-  background-color: #afe2ff;
-  padding: 10px;
-  border-radius: 0.5rem;
-  width: 12vw;
-  margin: 1rem;
-}
-
-.close-ai-modal-btn {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 2vw;
-  height: 3vh;
-}
-
-.user {
-  background-color: #1eadff;
-  padding: 10px;
-  border-radius: 0.5rem;
-  width: 12vw;
-  display: flex;
-  flex-direction: column;
-  margin: 1rem;
-} */
 
 .ai-modal-overlay {
   position: fixed;
