--- a/frontend/src/pages/GoalsPage/GoalsPage.css
+++ b/frontend/src/pages/GoalsPage/GoalsPage.css
@@ -1,7 +1,7 @@
 .body,
 html {
-  background: linear-gradient(180deg, #ffffff, #bae8ff);
-  padding-bottom: 12rem;
+  background: linear-gradient(180deg, #ffffff, #abe3ff);
+  padding-bottom: 30rem;
 }
 
 .GoalsPage {
