--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -6,7 +6,6 @@ h1.welcome-user {
   /* position: absolute; */
   height: 100%;
   width: calc(100% - 30px);
-  left: 30px;
   transition: all 0.5s ease;
   z-index:1000;
 }
@@ -19,4 +18,14 @@ p{
   font-family: "Regular";
 }
 
+.home-body{
+  margin-left:8rem;
+
+}
+
+.container-temp{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
 
